<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="exitServer"
            android:text="@string/btn_exit" />

        <TextView
            android:id="@+id/txt_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_guide"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/txt_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ip"
            android:textColor="@android:color/holo_red_light" />

        <EditText
            android:id="@+id/edt_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_leftcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_leftcode"
            android:textColor="@android:color/holo_red_light" />

        <EditText
            android:id="@+id/edt_leftcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_rightcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rightcode"
            android:textColor="@android:color/holo_red_light" />

        <EditText
            android:id="@+id/edt_rightcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <MultiAutoCompleteTextView
                android:id="@+id/NoteView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:textAlignment="textStart"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="leftPage"
                android:text="@string/btn_left" />

            <Button
                android:id="@+id/bth_right"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="rightPage"
                android:text="@string/btn_right" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>